[gd_scene load_steps=2 format=3 uid="uid://bjudiph2xbmbu"]

[ext_resource type="Script" path="res://src/components/v_box_list/v_box_list.gd" id="1_psfnh"]

[node name="VBoxList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_psfnh")

[node name="SearchBox" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Filter Editors"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="SearchBox" to="." method="_on_search_box_text_changed"]
